# EAF_modelling

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: migration_notes.md
scripts/: run_simulation.py
src/eaf_model/: __init__.py  cli.py  config.py  constants.py
src/eaf_model/analysis/: __init__.py  optimization.py  sensitivity.py
src/eaf_model/io/: results.py
src/eaf_model/plotting/: __init__.py  plots.py
src/eaf_model/simulation/: __init__.py  balances.py  chemistry.py  core.py  geometry.py  heat_transfer.py  mass_transfer.py  solver.py  state.py
tests/: test_optimization.py  test_sensitivity.py  test_simulation.py  test_smoke.py
