[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eaf-model"
version = "0.1.0"
description = "Python 3.12 migration of an Electric Arc Furnace dynamic model"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Colosseum Steelworks (migrated)", email = "noreply@example.com"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "pandas>=2.2",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
eaf-model = "eaf_model.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
